<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <data>
        <variable
            name="sharedViewModel"
            type="com.udacity.shoestore.SharedViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/addJetTagMainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        android:tag="layout/fragment_login">

        <EditText
            android:id="@+id/editTextEmail"
            style="@style/editText"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/loginViewMargin"
            android:drawableLeft="@drawable/ic_baseline_perm_identity_24"
            android:drawablePadding="@dimen/editTextPadding"
            android:ems="10"
            android:fontFamily="@font/cagliostro"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:minHeight="@dimen/minTouchHeight"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <EditText
            android:id="@+id/editTextTextPassword"
            style="@style/editText"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/loginViewMargin"
            android:drawableLeft="@drawable/ic_baseline_error_outline_24"
            android:drawablePadding="@dimen/editTextPadding"
            android:ems="10"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:minHeight="@dimen/minTouchHeight"
            app:layout_constraintBottom_toTopOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

        <Button
            android:id="@+id/loginButton"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewMargin"
            android:layout_marginBottom="80dp"
            android:onClick="@{() -> sharedViewModel.hasLoggedIn()}"
            android:text="@string/loginButtonText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/registerButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

        <Button
            android:id="@+id/registerButton"
            style="@style/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:onClick="@{() -> sharedViewModel.hasRegisteredLogin()}"
            android:text="@string/registerButtonText"
            app:layout_constraintBaseline_toBaselineOf="@+id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/loginButton" />

        <TextView
            android:id="@+id/textView2"
            style="@style/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="120dp"
            android:text="@string/loginTitle"
            app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>